css/styles.css
html {
	box-sizing: border-box;
	font-size: 62.5%;
}

*,
*:before,
*:after {
	box-sizing: inherit;
	text-decoration: none;
}

:root {
	--color-first: #1073ba;
	--color-second: #e51cc4;
	--color-dark: #2f3132;
	--color-white: #fff;
	--color-black: #000;
	--color-light-grey: #e1e1e1;

	--font-main: "Roboto", sans-serif;
	--font-second: "Lato", sans-serif;
}

body {
	font-family: var(--font-main);
	font-size: 1.6rem;
	line-height: 1.5;
}

h1,
h2,
h3 {
	font-weight: 900;
	font-family: var(--font-second);
	margin: 2.5rem 0;
}

h1 {
	font-size: 4.4rem;
}

h2 {
	font-size: 3.6rem;
}

h3 {
	font-size: 2.8rem;
}

img {
	max-width: 100%;
	display: block;
	height: auto;
}

/* 
Utilidades
===================================== */

.text-center {
	text-align: center;
}

.container {
	width: 90%;
	max-width: 100rem;
	margin: 0 auto;
}

.purple-gradient {
	color: transparent;
	background: linear-gradient(
		to right,
		var(--color-first) 0%,
		var(--color-second) 100%
	);
	-webkit-background-clip: text;
	background-clip: text;
}

/* 
Header
===================================== */

.header {
	background-color: var(--color-black);
	padding: 1rem;
	color: var(--color-white);
}

.navbar {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;
	align-items: center;
	height: 6rem;
}

.navbar-logo {
	display: inline-block;
	color: var(--color-white);
}

.navbar-logo h2 {
	margin: 0;
	font-size: 2.8rem;
}

.navbar-btns {
	display: flex;
	gap: 1rem;
}

.navbar-btns a {
	color: var(--color-light-grey);
	font-size: 2rem;
}

.navbar-btns a:hover {
	color: var(--color-white);
}

.navbar button {
	background-color: var(--color-black);
	color: var(--color-white);
	border: .1rem solid var(--color-white);
	border-radius: .2rem;
	padding: .3rem .7rem;
	transition-duration: .3s;
}

.navbar button:hover {
	background-color: var(--color-white);
	color: var(--color-black);
	cursor: pointer;
}

.navbar-menu[popover] {
	width: 100%;
	margin: 0;
	top: 6.5rem;
	background-color: var(--color-dark);
	color: var(--color-white);
	border: none;
}

@media (min-width: 768px) {
	.navbar-menu[popover] {
		display: flex;
		position: static;
		width: unset;
		background-color: transparent;
	}
	.navbar button {
		display: none;
	}
}

.navbar-menu a {
	display: block;
	color: var(--color-white);
	padding: 1rem .5rem;
	border-radius: .5rem;
	font-weight: 500;
	font-size: 1.4rem;
	-webkit-border-radius: .5rem;
	-moz-border-radius: .5rem;
	-ms-border-radius: .5rem;
	-o-border-radius: .5rem;
}

.navbar-menu a:hover {
	background-color: var(--color-white);
	color: var(--color-black);
	transition: .3s;
}

/* 
Header text
===================================== */

.header-img,
.header-text {
	text-align: center;
	padding-top: 5rem;
}

@media (min-width: 768px) {
	.header-content {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		padding: 5rem 0;
	}

	.header-text {
		text-align: left;
		display: flex;
		flex-direction: column;
		justify-content: space-between;
		margin: 0;
	}
}

.header-text p {
	margin: 0;
}

.product-slogan {
	font-size: 3rem;
	font-weight: 900;
}

.product-name {
	font-size: 6rem;
	margin: 0;
}

@media (min-width: 768) {
	.product-name {
		font-size: 9rem;
	}
}

.product-price span {
	font-size: 6rem;
	font-weight: 900;
}

/* 
Caracteristicas
===================================== */

.features-content {
	padding: 5rem 0;
	text-align: center;
	margin-bottom: 2.5rem;
}

.features-item i {
	font-size: 6rem;
}

.features-item h3 {
	color: var(--color-first);
}

@media (min-width: 992px) {
	.features-content {
		display: flex;
		gap: 2rem;
		align-items: stretch;
	}
}

/* 
About
===================================== */
.about {
	background-image: linear-gradient(
			to bottom,
			transparent 50%,
			var(--color-dark) 0%
		), url(../img/bg-logiprox.webp);
	background-position: right;
	background-repeat: repeat, no-repeat;
	background-size: 100%, 150rem;
}

.about-content {
	display: grid;
	grid-template-rows: repeat(2, 40rem);
	gap: 5rem;
}

.about-text {
	grid-row: 2 / 3;
	color: var(--color-white);
}

.about-text h2 {
	font-size: 4rem;
}

.about-text p {
	font-size: 2rem;
	line-height: 2;
}

@media (min-width: 992px) {
	.about {
		background-image: linear-gradient(
				to left,
				transparent 50%,
				var(--color-dark) 0%
			), url(../img/bg-logiprox.webp);
	}

	.about-content {
		grid-template-rows: unset;
		grid-row: unset;
		grid-template-columns: repeat(2, 1fr);
		column-gap: 4rem;
		padding: 4rem 0;
	}
}

/* 
Products
===================================== */
.products {
	padding: 5rem 0;
}

.products h2 {
	font-size: 4rem;
	margin-bottom: 5rem;
}

@media (min-width: 568px) {
	.products h2 {
		font-size: 6rem;
	}
}

.product-content {
	display: flex;
	flex-direction: column-reverse;
}

@media (min-width: 992px) {
	.product-content {
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		grid-template-rows: repeat(2, 20rem);
		gap: 4rem;
	}
}

.product-item {
	background-color: var(--color-light-grey);
	margin-bottom: 2rem;
	padding-left: 4rem;
	color: var(--color-dark);
	border-radius: 2rem;
	min-height: 20rem;
	background-repeat: no-repeat;
	background-position: 90% center;
	background-size: 15rem;

	display: flex;
	flex-direction: column;
	justify-content: center;
	transition-property: transform background-size;
	transition-duration: .3s;
}

.product-item:hover {
	transform: scale(1.1);
	background-size: 18rem;
	cursor: pointer;
	-webkit-transform: scale(1.1);
	-moz-transform: scale(1.1);
	-ms-transform: scale(1.1);
	-o-transform: scale(1.1);
}

@media (min-width: 568px) {
	.product-item:hover {
		transform: scale(1.1);
		background-size: 22rem;
		-webkit-transform: scale(1.1);
		-moz-transform: scale(1.1);
		-ms-transform: scale(1.1);
		-o-transform: scale(1.1);
	}
}

.product-item h3 {
	font-size: 2.4rem;
	margin-bottom: 0;
}

.product-item p {
	font-size: 4rem;
	font-weight: 800;
	line-height: 0;
}

.mouse {
	background-image: url(../img/mause-logiprox.webp);
}

.headset {
	background-image: url(../img/audifone-logiprox.webp);
}

.keyboard {
	background-image: url(../img/teclado-logiprox.webp);
	background-color: var(--color-dark);
	color: var(--color-first);
}

@media (min-width: 992px) {
	.keyboard {
		grid-column: 2;
		grid-row: 1 / 3;
	}
	.product-item h3 {
		font-size: 4rem;
	}
	.product-item p {
		font-size: 6rem;
	}
}

/* 
Sletter
===================================== */
.newsletter {
	background-image: url(../img/bg-teclado-audifono-mause-1000.webp);
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
}

.newsletter-content {
	display: grid;
	grid-template-rows: repeat(2, 40rem);
	gap: 5rem;
	justify-content: end;
}

@media (min-width: 567px){
	.newsletter-content {
		grid-template-rows: repeat(2, 30rem);
	}
}

@media (min-width: 992px){
	.newsletter {
		background-image: url(../img/bg-teclado-audifono-mause.webp);
	}
	.newsletter-content{
		grid-template-rows: repeat(2, 50rem);
	}
}

.newsletter-text {
	max-width: 40rem;
	color: var(--color-white);
}

.newsletter-text h2 {
	margin-bottom: 0;
	color: var(--color-first);
}

.newsletter-form .input {
	margin-bottom: 1rem;
}

.newsletter-form .input input {
	width: 100%;
	padding: 1rem;
	background-color: transparent;
	border: none;
	border-bottom: .1rem solid var(--color-first);
	color: var(--color-white);
}

.newsletter-form .input input:focus{
	outline: .1rem solid var(--color-first);
}

.newsletter-form input[type="submit"] {
	width: 100%;
	padding: 1rem;
	margin-top: 1rem;
	background-color: var(--color-first);
	color: var(--color-white);
	font-size: 2rem;
	border: none;
}

.newsletter-form input[type="submit"]:hover {
	background-color: #0a5f9c;
	cursor: pointer;
	transition: .3s;
	-webkit-transition: .3s;
	-moz-transition: .3s;
	-ms-transition: .3s;
	-o-transition: .3s;
}

footer {
	background-color: var(--color-first);
	margin: 0;
	padding: 2rem 0;
}

footer p {
	margin: 0;
	text-align: center;
	color: var(--color-white);
}

